@@ -4,8 +4,10 @@ import io.quarkus.hibernate.orm.panache.PanacheQuery;
 import jakarta.enterprise.context.ApplicationScoped;
 import org.acme.domain.gateway.CustomerGateway;
 import org.acme.infrastructure.config.db.schema.CustomerSchema;
+import org.acme.infrastructure.mapper.CustomerMapper;
+import org.acme.usecase.OutputPage;
 
-import java.util.List;
+import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class GetCustomerUseCase {
@@ -16,27 +18,26 @@ public class GetCustomerUseCase {
         this.customerGateway = customerGateway;
     }
 
-    public CustomerOutputPage execute(int page, int size) {
-
-
+    public OutputPage execute(int page, int size) {
 
          return toPageable(customerGateway.findAll(page, size));
-
     }
 
-    public List<CustomerSchema> execute() {
-        return customerGateway.findAll();
-
+    public CustomerOutput execute(Long id) {
+        return CustomerMapper.fromCustomerToCustomerOutput(customerGateway.findById(id));
     }
 
 
-
-    private CustomerOutputPage toPageable(PanacheQuery<CustomerSchema> schema) {
-        return new CustomerOutputPage(
+    private OutputPage toPageable(PanacheQuery<CustomerSchema> schema) {
+        return new OutputPage(
             String.valueOf(schema.page().index),
             String.valueOf(schema.pageCount()),
             String.valueOf(schema.count()),
-            schema.stream().map(customer -> new CustomerOutput(customer.getNome(), customer.getTelefone(), customer.getCpf(), customer.getEmail())).toList()
-        );
+                schema.stream().map(customer -> new CustomerOutput(
+                        customer.getId(),
+                        customer.getNome(),
+                        customer.getTelefone(),
+                        customer.getCpf(),
+                        customer.getEmail())).collect(Collectors.toList()));
     }
 }
